# task

./: .gitignore  .gitmodules  README.md  dev.ipynb  install.sh  pyproject.toml  requirements.txt  setup.py
config/: clislurm_task.yaml  slurm_task.yaml  volc_mltask.yaml
task/: __init__.py  base.py  slurm.py  utils.py  volcengine.py
test/: __init__.py  test_base.py  test_script.sh  test_slurm.py  test_volcengine.py
